--- a/01-gallery.html
+++ b/01-gallery.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+    " rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -13,7 +16,10 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-
+<script src="
+     https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js">
+    </script>
     <script src="js/01-gallery.js" type="module"></script>
+    
   </body>
 </html>
